--- a/takim/mertcancaldar.qmd
+++ b/takim/mertcancaldar.qmd
@@ -1,38 +1,44 @@
 ---
-title: "Frederico Rodrigues"
+title: "Mertcan ÇALDAR"
 ---
 
-![](/assets/images/vesikalik.jpeg){fig-align="center"}
+![](/assets/images/mertcan-vesikalık.PNG){fig-align="center" width="228"}
 
 # Eğitim
 
--   Lisans, ................................., .................................... Üniversitesi, Türkiye, 20xx - 20xx.
--   Yüksek Lisans, Endüstri Mühendisliği, Hacettepe Üniversitesi, Türkiye, 20xx - devam ediyor.
+-   Lisans, Makine & Otomotiv Mühendisliği, Hacettepe Üniversitesi, Türkiye, 2014 - 2020.
+-   Yüksek Lisans, Endüstri Mühendisliği, Hacettepe Üniversitesi, Türkiye, 2023 - devam ediyor.
 
 # İş Deneyimi
 
 ## İşler
 
-1.  Firma xxx, pozisyon xx, yıl xxx
+1.  Maschinenfabrik Augsburg-Nürnberg AG (MAN), Bus Modification Center Engineer, 2021-devam ediyor.
 
-2.  Firma yyy, pozisyon yyy, yıl yyy
+    *- 2024 Aramco Project MAN Individual Team Leader\
+    - 2023 MAN MEKKA Project MAN Individual Team Leader\
+    - 2022 MAN FAIR BUSSES MAN Individual Team Leader\
+    - 2022 MAN S4BUS(Standardization for Bus)(SAP, WTC System) MAN Individual Team Leader\
+    - 2022 MAN S4BUS(Standardization for Bus)(SAP, WTC System) implementation and integration\
+    - Documentation\
+    - Technical Drawing, 3D Data preparation, \
+    - Sustainable technology integration for new busses\
+    - New product finding with Hoshin\
+    - German and English presantation to customers and co-workers\
+    - Windchill (Catia PLM) Server Key User\
+    - MAN Bus Systems good to use: Etc; JNDS, Jira, SAP, Windchill\
+    - Rendering*
 
 ## Stajlar
 
-1.  Firma aaa, pozisyon xx, yıl xxx
+1.  Freudenberg Sealing Technologies, Stajyer, 2020
 
-2.  Firma bbb, pozisyon yyy, yıl yyy
+2.  MFK Makine Freze Kalıp LTD. ŞTİ, Stajyer
 
-# Projeler
-
-1.  TÜBİTAK 1001..........................
-
-# Yayınlar
-
-1.  Dasdemir, E., Batta, R., Koksalan, M., Tezcaner Öztürk, D. (2022) “İHA Yönlendirmesi için Keşif Misyonu: Zaman Bağımlı Ödülleri ve Çoklu Bağlantıları Olan Çok Amaçlı Oryantiring Problemi”, Computers & Operations Research, 145: 105882
+3.  Hacettepe Üniversitesi, Stajyer, 2016
 
 # Yetkinlikler
 
-R, Quarto, Git, Python
+Microsoft Office Programları, Adobe Photoshop CS6, SAP, Host, Jira, Baan, QFD, Ezis, WTC (Catia PLM)LCA(Catia PLM), Catia&Solidworks&Autocad
 
-# Hobiler
+# 
