--- a/index.qmd
+++ b/index.qmd
@@ -19,7 +19,7 @@ MUY665-İş Analitiği dersi Pokemın Takımı sayfamıza hoş geldiniz.
 
 5.  [Bahadır AKGÜN](/takim/bahadırakgun.qmd) (Squirtle)
 
-6.  [Belirsiz](/takim/belirsiz.qmd)
+6.  [Süleyman ÖZDEMİR](/takim/suleymanozdemir.qmd) (Charmander)
 
 ## Proje Adı
 
