--- a/takim/suleymanozdemir.qmd
+++ b/takim/suleymanozdemir.qmd
@@ -2,7 +2,7 @@
 title: "Süleyman ÖZDEMİR"
 ---
 
-![](/assets/images/.......PNG){fig-align="center" width=""}
+![](/assets/images/suleymanozdemir-vesikalık.png){fig-align="center" width=""}
 
 # Eğitim
 
