--- a/takim/suleymanozdemir.qmd
+++ b/takim/suleymanozdemir.qmd
@@ -11,7 +11,7 @@ title: "Süleyman ÖZDEMİR"
 
 # İş Deneyimi
 
-1.  Dorçe \| Prefabrik & İnşaat , Procurement Specialist , 2023 - 2024
+1.  Dorçe Prefabrik & İnşaat , Procurement Specialist , 2023 - 2024
 2.  Doratek Medikal , Procurement Specialist , 2022 - 2023
 
 ## İşler
