--- a/portfolyo/calisma1.qmd
+++ b/portfolyo/calisma1.qmd
@@ -33,12 +33,14 @@ numeric_cols <- sapply(mtcars, is.numeric)
 # Her bir sayısal sütun için custom_summary fonksiyonunu uygula ve sonuçları yan yana yazdır
 for (col in names(mtcars)[numeric_cols]) {
   summary <- custom_summary(mtcars[[col]])
-  cat("**Araba Özellikleri:**", col, "\n")
+  cat("Araba Özellikleri:", col, "\n")
   cat("Ortalama:", summary$Ortalama, "\t")
   cat("Medyan:", summary$Medyan, "\t")
-  cat("Standart Sapma:", summary$Standart_Sapma, "\t")
+  cat("Standart Sapma:", round (summary$Standart_Sapma, digits = 2), "\t")
   cat("Minimum:", summary$Minimum, "\t")
   cat("Maksimum:", summary$Maksimum, "\n")
+  
+  cat("------------------------------------------------------------------------------------------------------------","\n")
 }
 
 
