--- a/portfolyo/calisma1.qmd
+++ b/portfolyo/calisma1.qmd
@@ -34,10 +34,10 @@ numeric_cols <- sapply(mtcars, is.numeric)
 for (col in names(mtcars)[numeric_cols]) {
   summary <- custom_summary(mtcars[[col]])
   cat("Araba Özellikleri:", col, "\n")
-  cat("Ortalama:", summary$Ortalama, "\t")
-  cat("Medyan:", summary$Medyan, "\t")
-  cat("Standart Sapma:", round (summary$Standart_Sapma, digits = 2), "\t")
-  cat("Minimum:", summary$Minimum, "\t")
+  cat("Ortalama:", summary$Ortalama, "\t \t")
+  cat("Medyan:", summary$Medyan, "\t \t")
+  cat("Standart Sapma:", round (summary$Standart_Sapma, digits = 2), "\t \t")
+  cat("Minimum:", summary$Minimum, "\t \t")
   cat("Maksimum:", summary$Maksimum, "\n")
   
   cat("------------------------------------------------------------------------------------------------------------","\n")
