--- a/portfolyo/calisma1.qmd
+++ b/portfolyo/calisma1.qmd
@@ -33,9 +33,9 @@ for (col in names(mtcars)[sayisal_sutunlar]) {
   ozet <- ozel_ozet(mtcars[[col]])
   cat("Araba Özellikleri:", col, "\n")
   cat("Ortalama:",  ozet$Ortalama, "\t \t")
-  cat("Medyan:",sprintf("%10.2f", round(ozet$Medyan,digits = 2)), "\t \t")
+  cat("Medyan:",sprintf("%.2f", round(ozet$Medyan,digits = 2)), "\t \t")
   cat("Standart Sapma:", round (ozet$Standart_Sapma, digits = 2), "\t \t")
-  cat("Minimum:", ozet$Minimum, "\t \t")
+  cat("Minimum:", sprintf("%.2f",ozet$Minimum), "\t \t")
   cat("Maksimum:", ozet$Maksimum, "\n")
   
   cat("------------------------------------------------------------------------------------------------------------","\n")
