--- a/proje.qmd
+++ b/proje.qmd
@@ -5,10 +5,9 @@ number-sections: true
 
 **Proje sayfamıza hoş geldiniz.**
 
-_Projemizle ilgili güncellemelerden haberdar olmak için bu alanı takip edin._
+*Projemizle ilgili güncellemelerden haberdar olmak için bu alanı takip edin.*
 
 (Aşağıdaki başlıklar örnek olarak verilmiştir; lütfen gerektiği şekilde düzenlemekten çekinmeyin.)
-
 
 # Proje Genel Bakış ve Kapsamı
 
@@ -16,7 +15,28 @@ xxxxxx
 
 # Veri
 
-xxxxxx
+```{r}
+ #install.packages("stringr")
+library(dplyr)
+    library(readr)
+    library(knitr)
+    library(ggplot2)
+    library(leaflet)
+    library(readxl)
+    library(gridExtra)
+    library(readxl)
+    library(stringi)
+    library(stringr)
+    
+    #deprem_analiz <- read_excel("deprem.xlsx")
+    #deprem_analiz$ilce_adi <- stri_trans_general(deprem_analiz$ilce_adi, "latin-ascii")
+   #deprem_analiz$ilce_adi <- iconv(deprem_analiz$ilce_adi, from = "latin1", to = "UTF-8")
+    deprem_analiz <- read.csv("deprem-senaryosu-analiz-sonuclar.csv")
+    #deprem_analiz$ilce_adi <- gsub("Ý", "İ", deprem_analiz$ilce_adi, fixed = TRUE)
+    #deprem_analiz$ilce_adi <- gsub("Ð", "Ğ", deprem_analiz$ilce_adi, fixed = TRUE)
+    #deprem_analiz$ilce_adi <- gsub("Þ", "Ş", deprem_analiz$ilce_adi, fixed = TRUE)
+    #deprem_analiz$ilce_adi <- gsub("Þ", "Ş", deprem_analiz$ilce_adi, fixed = TRUE)
+```
 
 ## Veri Kaynağı
 
